# predictive_maintenance

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
Predictive Maintenance/: __init__.py
Predictive Maintenance/data/: make_dataset.py
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: exploration.ipynb
predictive_maintenance/: __init__.py
